<resources>
    <string name="app_name">Questionnaire</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <string name="dialog_title">Incorrect name</string>
    <string name="dialog_message">Check entered data</string>
    <string name="auth_dialog_title">Registration failed</string>
    <string name="auth_dialog_message">Check you registration</string>
    <string name="help_dialog_title">New alarm</string>
    <string name="help_dialog_message">Confirm or reject</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancle">Cancle</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_reject">Reject</string>


    <string name="enter_name">Introduce!</string>

    <string name="title_activity_user_account">Account</string>
    <string name="FirstName">First Name</string>
    <string name="SecondName">Second Name</string>
    <string name="PhoneNumber">Phone</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="Age">Age</string>
    <string name="sign">Sign in</string>

    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_questionaire">Questionaire</string>
    <string name="title_activity_questionnaire">Questionnaire</string>

    <string name="Content_About_Old">The app is designed to help people who find themselves in emergency situations outside the home. If the patient feels ill, he can either call an ambulance on their own or with the help of the application to inform the volunteers.
\nDevelopers:
\n Y. Zavyalovа,
\n M. Kluchnikov,
\n A. Dyatlova,
\n V. Fokin,
\n K. Shevtsova,
\n <b>K. Orlov</b>
\nVersion: 1.0</string>

    <string name="Content_About">
\n
\n
\n<b>Руководство пользователя</b>
\n
\n <b>Введение</b>
\n \t Мы живём в 21 веке, когда медицина развита как никогда. Ежедневно врачи спасают тысячи жизней. Люди научились лечить заболевания, некогда считавшиеся неизлечимы- ми. Однако, даже сейчас остаются ситуации, в которых врачи бессильны. Но, что более обидно, нередко попадаются случаи, когда врачи просто-напросто не успевают помочь больному. Одна из причин таких случаев – сердечно-сосудистые заболевания.
\n
\n По данным Всемирной организации здравоохранения сердечно-сосудистые заболевания являются основной причиной смертности во всём мире. Развитие технологий при- вело к тому, что человек не ведёт активный образ жизни, не придерживается здорового питания, и как следствие у него возникают вредные привычки. Все перечисленные при- чины ведут к развитию сердечно-сосудистых заболеваний. У человека может случиться внезапное обострение болезни в любом месте и в любое время, когда рядом нет специалиста, способного помочь. Именно для таких ситуаций и ведётся разработка сервиса Mobile HealthCare.
\n
\n <b>Назначение и условия применения</b>
\n Данное приложение предназначено для людей с диагностированными сердечно-сосудистыми заболеваниями (далее – пациенты).
\n С помощью приложения пациент может пройти опрос о своём самочувствии. Опросы могут быть двух типов.
\n Первый тип – периодическое анкетирование наблюдаемых пациентов для отслеживания состояния пациента при нормальных условиях. Главной функцией периодического анкетирование является преждевременное обнаружение отклонений в здоровье пациента и своевременное оказание необходимой помощи.
\n Второй тип – опрос, проводимый в критической ситуации, т.е. когда у пациента происходит обострение болезни или ухудшение самочувствия.
\n С помощью приложения медицинские работники скорой помощи могут получить результаты опроса пациента, который он прошёл, находясь в критической ситуации. Таким образом, работники скорой помощи смогут заранее узнать некоторые симптомы пациента до прибытия на место вызова.
\n Вопросы в опросе могут быть двух типов: открытые и закрытые. В открытом вопросе пользователю либо предоставляется ограниченное поле для ввода, либо возможность прикрепить медиа-файл. В закрытом вопросе пользователь не может вводить текстовую информацию или прикреплять медиа-файлы, он может только выбирать один или несколько ответов из предложенного списка ответов.
\n
\n <b>Типы вопросов?</b>
\n
\n <b>Подготовка к работе</b>
\n Чтобы начать пользоваться приложением, требуется установить apk-файл на своё устройство (ОС Android) и зарегистрироваться в системе.
\n Для корректной работы приложения требуется доступ к сети Интернет.
\n
\n <b>Описание операций</b>
\n При старте приложения на ваше устройство будет автоматически загружен файл с опросом.
\n Для начала прохождения опроса требуется нажать на кнопку «PASS SURVEY», расположенную на главном экране приложения.
\n Далее следует отвечать на вопросы, исходя из содержания. Вам может быть предложено выбрать один или несколько из возможных вариантов ответа, ввести число/текст, прикрепить медиа файл.
\n
\n <b>Дальнейшее развитие?</b>
\n
\n <b>Разработчики</b>
\n Над созданием приложения работали:
\n Ю. Завьялова
\n М. Ключников
\n А. Дятлова
\n В. Фокин
\n К. Шевцова
\n К. Орлов
</string>

</resources>
